crates/cairo-lang-parser/src/parser_test_data/partial_trees/expr
//! > Test negative literal

//! > test_runner_name
test_partial_parser_tree(expect_diagnostics: false)

//! > cairo_code
fn f() -> u32 {
    -3 * 5
}

//! > top_level_kind
StatementExpr

//! > ignored_kinds

//! > expected_diagnostics

//! > expected_tree
└── Top level kind: StatementExpr
    ├── attributes (kind: AttributeList) []
    ├── expr (kind: ExprBinary)
    │   ├── lhs (kind: ExprUnary)
    │   │   ├── op (kind: TokenMinus): '-'
    │   │   └── expr (kind: TokenLiteralNumber): '3'
    │   ├── op (kind: TokenMul): '*'
    │   └── rhs (kind: TokenLiteralNumber): '5'
    └── semicolon (kind: OptionTerminalSemicolonEmpty) []

//! > ==========================================================================

//! > Test precedence between unary and binary operators

//! > test_runner_name
test_partial_parser_tree(expect_diagnostics: false)

//! > cairo_code
fn f() -> u32 {
    -a * 5
}

//! > top_level_kind
StatementExpr

//! > ignored_kinds

//! > expected_diagnostics

//! > expected_tree
└── Top level kind: StatementExpr
    ├── attributes (kind: AttributeList) []
    ├── expr (kind: ExprBinary)
    │   ├── lhs (kind: ExprUnary)
    │   │   ├── op (kind: TokenMinus): '-'
    │   │   └── expr (kind: ExprPath)
    │   │       ├── dollar (kind: OptionTerminalDollarEmpty) []
    │   │       └── segments (kind: ExprPathInner)
    │   │           └── item #0 (kind: PathSegmentSimple)
    │   │               └── ident (kind: TokenIdentifier): 'a'
    │   ├── op (kind: TokenMul): '*'
    │   └── rhs (kind: TokenLiteralNumber): '5'
    └── semicolon (kind: OptionTerminalSemicolonEmpty) []

//! > ==========================================================================

//! > Test consecutive comparison operators

//! > test_runner_name
test_partial_parser_tree(expect_diagnostics: true)

//! > cairo_code
fn f() -> bool {
    3 < 1    > 5
}

//! > top_level_kind
StatementExpr

//! > ignored_kinds

//! > expected_diagnostics
error[E1028]: Consecutive comparison operators are not allowed: '<' followed by '>'. If this appears in a generic path, you may be missing `::` (for example, `foo::<T>(...)`).
 --> dummy_file.cairo:2:14
    3 < 1    > 5
             ^

//! > expected_tree
└── Top level kind: StatementExpr
    ├── attributes (kind: AttributeList) []
    ├── expr (kind: ExprBinary)
    │   ├── lhs (kind: ExprBinary)
    │   │   ├── lhs (kind: TokenLiteralNumber): '3'
    │   │   ├── op (kind: TokenLT): '<'
    │   │   └── rhs (kind: TokenLiteralNumber): '1'
    │   ├── op (kind: TokenGT): '>'
    │   └── rhs (kind: TokenLiteralNumber): '5'
    └── semicolon (kind: OptionTerminalSemicolonEmpty) []

//! > ==========================================================================

//! > Test consecutive equality operators

//! > test_runner_name
test_partial_parser_tree(expect_diagnostics: true)

//! > cairo_code
fn f() -> bool {
    1 == 1 == 1
}

//! > top_level_kind
StatementExpr

//! > ignored_kinds

//! > expected_diagnostics
error[E1028]: Consecutive comparison operators are not allowed: '==' followed by '=='. If this was intended as a chained comparison, rewrite it with `&&` (for example, `a < b && b < c`).
 --> dummy_file.cairo:2:12
    1 == 1 == 1
           ^

//! > expected_tree
└── Top level kind: StatementExpr
    ├── attributes (kind: AttributeList) []
    ├── expr (kind: ExprBinary)
    │   ├── lhs (kind: ExprBinary)
    │   │   ├── lhs (kind: TokenLiteralNumber): '1'
    │   │   ├── op (kind: TokenEqEq): '=='
    │   │   └── rhs (kind: TokenLiteralNumber): '1'
    │   ├── op (kind: TokenEqEq): '=='
    │   └── rhs (kind: TokenLiteralNumber): '1'
    └── semicolon (kind: OptionTerminalSemicolonEmpty) []
